--- a/.github/workflows/test_cases.yml
+++ b/.github/workflows/test_cases.yml
@@ -13,5 +13,6 @@ jobs:
         python-version: 3.9
     - name: Test with unittest
       run: |
+        pip install azure-servicebus
         pip install email_validator
         python -m unittest discover -s ./tests
