build: add requirements file and update readme

--- a/.github/workflows/test_cases.yml
+++ b/.github/workflows/test_cases.yml
@@ -13,6 +13,5 @@ jobs:
         python-version: 3.9
     - name: Test with unittest
       run: |
-        pip install azure-servicebus
-        pip install flanker
+        pip install -r requirements.txt
         python -m unittest discover -s ./tests
